--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@ngbracket/ngx-layout": "^17.0.1",
+    "ng2-file-upload": "^5.0.0",
     "ngx-colors": "^3.6.0",
     "or": "^0.2.0",
     "rxjs": "~7.8.0",
