--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
               "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
